# ChangeLog for dev-perl/Test-POE-Server-TCP
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*Test-POE-Server-TCP-1.10 (  12 Jun 2010 )

  12 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +Test-POE-Server-TCP-1.10.ebuild:
  bump

  20 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +Test-POE-Server-TCP-1.08.ebuild, +metadata.xml:
  initial commit
