@@ -1,6 +1,4 @@
-DIST Test-POE-Server-TCP-1.08.tar.gz 34326 RMD160 3cb08d1b18a82edc91da232904a9874ba4fd8ecc SHA1 48991ddfdec9890c049fe39bed2c8d997efc4f8d SHA256 7baa6a11c6b69b82f91852561562f058ebceed2f77bd6526b5e32ed22bde864f
 DIST Test-POE-Server-TCP-1.10.tar.gz 36950 RMD160 00814c61e3db323979ee9424987576e2674a2c52 SHA1 37da129c23323ee7ce5eb9c8683f065d970c7caa SHA256 4e5997523b6cbdd9e08b260d46636bbd8f93c9b416b0b8ee00520a5575965f52
-EBUILD Test-POE-Server-TCP-1.08.ebuild 354 RMD160 0f5cfa6ea1e2f3a735190a26ec7ba740238f21fc SHA1 d7cb6fc9eae3797287b1d11ce2537f5276d4520b SHA256 5d49cae4e1452ebfaaa8c01c630425aefa91ef10905402952aa8886aef3089e2
 EBUILD Test-POE-Server-TCP-1.10.ebuild 354 RMD160 0f5cfa6ea1e2f3a735190a26ec7ba740238f21fc SHA1 d7cb6fc9eae3797287b1d11ce2537f5276d4520b SHA256 5d49cae4e1452ebfaaa8c01c630425aefa91ef10905402952aa8886aef3089e2
-MISC ChangeLog 392 RMD160 4f535316c841008e0711d68766c20bacdae1238f SHA1 ed37410647d8edb066b2eab0d36df1fab0e4a967 SHA256 b83630b568fa31bf446a83f71bf9159b24fa4c3af86d494e0e58b908c6d94e8e
+MISC ChangeLog 493 RMD160 a25eda8f1fe293834f28bde8143925a11fa2467a SHA1 f3c52d48bef3b27fee9c82a7e35f7e1c33e656ed SHA256 753438012c65e318c98a95a3506955d606f2078b88974fcee051fa14e6575a02
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
